--- a/tests.yaml
+++ b/tests.yaml
@@ -42,16 +42,16 @@ uvmprimer:11-uvm-environments:
     - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=RandomTest
     - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=AddTest
 uvmprimer:12-analysis-ports:
-  compileFlags: -compile-top Top
-  runFlags: -run-top Top
+  compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
+  runFlags: -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=DiceTest
 uvmprimer:13-analysis-ports-test:
   compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
     - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=RandomTest
     - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=AddTest
 uvmprimer:14-communication:
-  compileFlags: -compile-top Top
-  runFlags: -run-top Top
+  compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
+  runFlags: -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=CommunicationTest
 uvmprimer:15-communication-test:
   compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
@@ -99,18 +99,18 @@ vkprimer:06-type-parameters:
   compileFlags: -compile-top Top
   runFlags: -run-top Top
 
-sanity:01-count:
+misc:01-count:
   compileFlags: -compile-top Count
   runFlags: -run-top Count
-sanity:02-adder:
+misc:02-adder:
   compileFlags: -compile-top AdderTop
   runFlags: -run-top AdderTop
-sanity:03-multiplier:
+misc:03-multiplier:
   compileFlags: -compile-top MultiplyFunctionTest -compile-top MultiplyModuleTest
   runFlags:
     - -run-top MultiplyFunctionTest
     - -run-top MultiplyModuleTest
-sanity:04-comb:
+misc:04-comb:
   compileFlags: >
     -compile-top BitScanReverseTest
     -compile-top IsPowerOfTwoTest
@@ -118,7 +118,8 @@ sanity:04-comb:
     -compile-top EqualTest
     -compile-top VectorEqualTest
     -compile-top SevenSegmentDecoderTest
-    -compile-top PopulationCountTest IsGeqTest
+    -compile-top PopulationCountTest
+    -compile-top IsGeqTest
   runFlags:
     - -run-top BitScanReverseTest
     - -run-top IsPowerOfTwoTest
@@ -126,8 +127,9 @@ sanity:04-comb:
     - -run-top EqualTest
     - -run-top VectorEqualTest
     - -run-top SevenSegmentDecoderTest
-    - -run-top PopulationCountTest IsGeqTest
-sanity:05-alu:
+    - -run-top PopulationCountTest
+    - -run-top IsGeqTest
+misc:05-alu:
   compileFlags: >
     -compile-top Sr32Test
     -compile-top Sll32Test
@@ -150,6 +152,6 @@ sanity:05-alu:
     - -run-top RcaTest
     - -run-top AddSubTest
     - -run-top AluTest
-sanity:06-cache:
+misc:06-cache:
   compileFlags: -compile-top CacheTop
   runFlags: -run-top CacheTop
