--- a/tests.yaml
+++ b/tests.yaml
@@ -27,10 +27,10 @@ uvmprimer:08-oop-test:
   compileFlags: -compile-top top
   runFlags: -run-top top
 uvmprimer:09-uvm-test:
-  compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
+  compileFlags: -compile-top top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=RandomTest
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=AddTest
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=random_test
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=add_test
 uvmprimer:10-uvm-components:
   compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
