--- a/tests.yaml
+++ b/tests.yaml
@@ -105,6 +105,10 @@ vkprimer:08-oop-test:
   compileFlags: -compile-top Top
   runFlags: -run-top Top
 
+svverif:01-arbiter:
+  compileFlags: -compile-top Top
+  runFlags: -run-top Top
+
 misc:01-count:
   compileFlags: -compile-top Count
   runFlags: -run-top Count
