Rewrite deep operations example

--- a/tests.yaml
+++ b/tests.yaml
@@ -63,8 +63,8 @@ uvmprimer:16-uvm-reporting:
     - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=RandomTest
     - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=AddTest
 uvmprimer:17-deep-operations:
-  compileFlags: -compile-top Top
-  runFlags: -run-top Top
+  compileFlags: -compile-top top
+  runFlags: -run-top top
 uvmprimer:18-uvm-transactions:
   compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
@@ -102,6 +102,9 @@ vkprimer:07-factory-pattern:
   compileFlags: -compile-top Top
   runFlags: -run-top Top
 vkprimer:08-oop-test:
+  compileFlags: -compile-top Top
+  runFlags: -run-top Top
+vkprimer:17-deep-operations:
   compileFlags: -compile-top Top
   runFlags: -run-top Top
 
