--- a/tests.yaml
+++ b/tests.yaml
@@ -42,8 +42,8 @@ uvmprimer:11-uvm-environments:
     - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=random_test
     - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=add_test
 uvmprimer:12-analysis-ports:
-  compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
-  runFlags: -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=DiceTest
+  compileFlags: -compile-top top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
+  runFlags: -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so
 uvmprimer:13-analysis-ports-test:
   compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
