--- a/tests.yaml
+++ b/tests.yaml
@@ -53,10 +53,10 @@ uvmprimer:14-communication:
   compileFlags: -compile-top top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags: -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so
 uvmprimer:15-communication-test:
-  compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
+  compileFlags: -compile-top top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=RandomTest
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=AddTest
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=random_test
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=add_test
 uvmprimer:16-uvm-reporting:
   compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
