--- a/tests.yaml
+++ b/tests.yaml
@@ -66,10 +66,10 @@ uvmprimer:17-deep-operations:
   compileFlags: -compile-top top
   runFlags: -run-top top
 uvmprimer:18-uvm-transactions:
-  compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
+  compileFlags: -compile-top top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=RandomTest
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=AddTest
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=random_test
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=add_test
 uvmprimer:19-uvm-agents:
   compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags: -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=DualTest
