--- a/tests.yaml
+++ b/tests.yaml
@@ -74,11 +74,11 @@ uvmprimer:19-uvm-agents:
   compileFlags: -compile-top top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags: -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so
 uvmprimer:20-uvm-sequences:
-  compileFlags: -compile-top Top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
+  compileFlags: -compile-top top -incdir $UVM_HOME/src $UVM_HOME/src/uvm_pkg.sv
   runFlags:
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=FibonacciTest
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=FullTest
-    - -run-top Top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=ParallelTest
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=fibonacci_test
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=full_test
+    - -run-top top -sv_lib $UVM_HOME/src/dpi/libuvm_dpi.so +UVM_TESTNAME=parallel_test
 
 vkprimer:01-conventional-test:
   compileFlags: -compile-top Top
