--- a/tests.yaml
+++ b/tests.yaml
@@ -114,6 +114,9 @@ svverif:01-arbiter:
 svverif:02-unique-array:
   compileFlags: -compile-top Top
   runFlags: -run-top Top
+svverif:03-atm-switch:
+  compileFlags: -compile-top Top
+  runFlags: -run-top Top
 
 misc:01-count:
   compileFlags: -compile-top Count
